Сделал разметку главной и формы

--- a/index.html
+++ b/index.html
@@ -5,8 +5,110 @@
     <title>HTML Academy: Пинк</title>
   </head>
   <body>
+    <div class="top-menu">
+      <div>Pink</div>
+      <a class="menu-btn" href="#"></a>
+      <nav class="mobile-menu">
+        <ul>
+          <li>
+            <a href="#">Информация</a>
+          </li>
+          <li>
+            <a href="#">Блог</a>
+          </li>
+          <li>
+            <a href="#">Отзывы</a>
+          </li>
+          <li>
+            <a href="#">Конкурс</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <section class="intro">
+      <p> Взгляните на жизнь
+        <br>иначе
+      </p>
+      <img src="#" alt="placehold" width="50" height="50">
+    </section>
+    <section class="applicaitions">
+      <a href="#">Скачать приложение</a>
+      <div>
+        <img src="#" alt="placehold" width="50" height="50">
+        <img src="#" alt="placehold" width="50" height="50">
+        <img src="#" alt="placehold" width="50" height="50">
+      </div>
+      <span>Доступно для iPhone, iPad, Android,
+          <br>Windows Phone, OS X, Windows 8
+      </span>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн-курсе «<a href="https://htmlacademy.ru/advanced_intensive">Продвинутый HTML и CSS</a>».</p>
+    </section>
+    <section class="info">
+      <p>Устали от серости
+        <br>мегаполиса?
+      </p>
+      <p>Нам есть, что вам
+        <br>предложить!
+      </p>
+      <h2>Поднимает настроение</h2>
+      <p>Приложение позволит вам победить
+        <br>осеннюю хандру и деперессию буквально в
+        <br>несколько кликов!
+      </p>
+      <h2>Меняет мир вокруг</h2>
+      <p>Сделайте снимок и украсьте его
+        <br>смайликом или текстовой подписью,
+        <br>чтобы усилить эффект
+      </p>
+      <h2>Заводит новых друзей</h2>
+      <p>Ставьте лайки, комментируте, делитесь
+        <br>фотографиями с друзьями и заводите
+        <br>новых
+      </p>
+      <img src="#" alt="placehold" width="50" height="50">
+    </section>
+    <section class="reviews">
+      <h2 class="review-name">Николай Петров</h2>
+      <p class="review-text">«Это приложение перевернуло мой мир
+        <br>и позволило по-новому взглянуть на
+        <br>привычные серые вещи! А еще я
+        <br>познакомился со своей будущей женой
+        <br>в комментариях к выложенной
+        <br>фотографии!»
+      </p>
+      <div class="switches">...</div>
+    </section>
+    <section class="shop">
+      <div class="rate-price">
+        Стандарт
+          <br>3,99 USD
+      </div>
+      <ul class="rate-features">
+        <li>Розовый фильтр</li>
+        <li>Смайлики</li>
+        <li>Комментарии</li>
+      </ul>
+      <div class="switches">...</div>
+    </section>
+    <section class="contacts">
+      <p>Остались вопросы?
+        <br>Свяжитесь с нами!
+      </p>
+      <h2>Звоните:</h2>
+      <p>+7(812) 555-66-66</p>
+      <h2>Пишите:</h2>
+      <p>mail@htmlacademy.ru</p>
+      <h2>Приезжайте в гости:</h2>
+      <p>ул. Большая
+        <br>Конюшенная, 19/8
+      </p>
+      <div class="map">
+        <img src="#" alt="placehold" width="50" height="50">
+      </div>
+    </section>
+
+
+
 
   </body>
 </html>
