--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       </nav>
     </div>
     <section class="intro">
-      <p> Взгляните на жизнь
+      <h1> Взгляните на жизнь
         <br>иначе
-      </p>
+      </h1>
       <img src="#" alt="placehold" width="50" height="50">
     </section>
     <section class="applicaitions">
