--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="top-menu">
-      <div>Pink</div>
+      <a href="#">Pink</a>
       <a class="menu-btn" href="#"></a>
       <nav class="mobile-menu">
         <ul>
@@ -26,9 +26,7 @@
       </nav>
     </div>
     <section class="intro">
-      <h1> Взгляните на жизнь
-        <br>иначе
-      </h1>
+      <h1>Взгляните на жизнь иначе</h1>
       <img src="#" alt="placehold" width="50" height="50">
     </section>
     <section class="applicaitions">
@@ -38,70 +36,95 @@
         <img src="#" alt="placehold" width="50" height="50">
         <img src="#" alt="placehold" width="50" height="50">
       </div>
-      <span>Доступно для iPhone, iPad, Android,
-          <br>Windows Phone, OS X, Windows 8
-      </span>
+      <div>Доступно для iPhone, iPad, Android,
+          Windows Phone, OS X, Windows 8
+      </div>
 
     </section>
     <section class="info">
-      <p>Устали от серости
-        <br>мегаполиса?
-      </p>
-      <p>Нам есть, что вам
-        <br>предложить!
-      </p>
+      <p>Устали от серости мегаполиса?</p>
+      <p>Нам есть, что вам предложить!</p>
       <h2>Поднимает настроение</h2>
-      <p>Приложение позволит вам победить
-        <br>осеннюю хандру и деперессию буквально в
-        <br>несколько кликов!
-      </p>
+      <p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
       <h2>Меняет мир вокруг</h2>
-      <p>Сделайте снимок и украсьте его
-        <br>смайликом или текстовой подписью,
-        <br>чтобы усилить эффект
-      </p>
+      <p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
       <h2>Заводит новых друзей</h2>
-      <p>Ставьте лайки, комментируте, делитесь
-        <br>фотографиями с друзьями и заводите
-        <br>новых
-      </p>
+      <p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
       <img src="#" alt="placehold" width="50" height="50">
     </section>
     <section class="reviews">
-      <h2 class="review-name">Николай Петров</h2>
-      <p class="review-text">«Это приложение перевернуло мой мир
-        <br>и позволило по-новому взглянуть на
-        <br>привычные серые вещи! А еще я
-        <br>познакомился со своей будущей женой
-        <br>в комментариях к выложенной
-        <br>фотографии!»
-      </p>
-      <div class="switches">...</div>
+      <div class="slider">
+        <div class="slider__item">
+          <article class="app-review">
+            <h1 class="app-review__user">Николай Петров</h1>
+            <p class="app-review__text">
+              «Это приложение перевернуло мой мир и
+              позволило по-новому взглянуть на
+              привычные серые вещи! А еще я
+              познакомился со своей будущей женой в
+              комментариях к выложенной фотографии!»
+            </p>
+          </article>
+        </div>
+        <div class="slider__switch  slider__switсh--app-review">
+          <i></i>
+          <i class="slider__switch--active"></i>
+          <i></i>
+        </div>
+      </div>
     </section>
     <section class="shop">
-      <div class="rate-price">
-        Стандарт
-          <br>3,99 USD
+      <div class="slider">
+        <div class="slider__item">
+          <table class="rates">
+            <tr>
+              <td>
+                <div>База</div>
+                <div>1,99 USD</div>
+              </td>
+              <td>
+                <div>Стандарт</div>
+                <div>3,99 USD</div>
+              </td>
+              <td>
+                <div>Андим</div>
+                <div>9,99 USD</div>
+              </td>
+            </tr>
+            <tr>
+              <td>Розовый фильтр</td>
+              <td>Розовый фильтр</td>
+              <td>Розовый фильтр</td>
+            </tr>
+            <tr>
+              <td>Смайлики</td>
+              <td>Смайлики</td>
+              <td>Смайлики</td>
+            </tr>
+            <tr>
+              <td>Коментарии</td>
+              <td>Коментарии</td>
+              <td>Коментарии</td>
+            </tr>
+
+          </table>
+
+        </div>
       </div>
-      <ul class="rate-features">
-        <li>Розовый фильтр</li>
-        <li>Смайлики</li>
-        <li>Комментарии</li>
-      </ul>
-      <div class="switches">...</div>
+      <div class="slider__switch  slider__switсh--rate-review">
+        <i></i>
+        <i class="slider__switch--active"></i>
+        <i></i>
+      </div>
     </section>
     <section class="contacts">
-      <p>Остались вопросы?
-        <br>Свяжитесь с нами!
-      </p>
+      <p>Остались вопросы? Свяжитесь с нами!</p>
       <h2>Звоните:</h2>
       <p>+7(812) 555-66-66</p>
       <h2>Пишите:</h2>
       <p>mail@htmlacademy.ru</p>
       <h2>Приезжайте в гости:</h2>
-      <p>ул. Большая
-        <br>Конюшенная, 19/8
-      </p>
+      <p>ул. Большая Конюшенная, 19/8</p>
       <div class="map">
         <img src="#" alt="placehold" width="50" height="50">
       </div>
