--- a/form.html
+++ b/form.html
@@ -5,22 +5,22 @@
     <title>Конкурс</title>
 </head>
 <body>
-  <div class="top-menu">
-    <a href="index.html">Pink</a>
-    <a class="menu-btn" href="#"></a>
-    <nav class="nav">
+  <div class="header">
+    <a class="logo" href="index.html">Pink</a>
+    <a class="nav-icon nav-icon--close" href="#"></a>
+    <nav class="nav header__nav">
       <ul>
-        <li>
-          <a href="#">Информация</a>
+        <li class="nav__item">
+          <a class="nav__link" href="#">Информация</a>
         </li>
-        <li>
-          <a href="#">Блог</a>
+        <li class="nav__item">
+          <a class="nav__link" href="#">Блог</a>
         </li>
-        <li>
-          <a href="#">Отзывы</a>
+        <li class="nav__item">
+          <a class="nav__link" href="#">Блог</a>
         </li>
-        <li>
-          <a href="#">Конкурс</a>
+        <li class="nav__item">
+          <a class="nav__link" href="#">Блог</a>
         </li>
       </ul>
     </nav>
