--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <title>HTML Academy: Пинк</title>
   </head>
   <body>
-    <div class="top-menu">
-      <a href="#">Pink</a>
-      <a class="menu-btn" href="#"></a>
-      <nav class="mobile-menu">
+    <div class="header">
+      <a class="logo" href="index.html">Pink</a>
+      <a class="nav-icon nav-icon--close" href="#"></a>
+      <nav class="nav header__nav">
         <ul>
-          <li>
-            <a href="#">Информация</a>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Информация</a>
           </li>
-          <li>
-            <a href="#">Блог</a>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Блог</a>
           </li>
-          <li>
-            <a href="#">Отзывы</a>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Блог</a>
           </li>
-          <li>
-            <a href="#">Конкурс</a>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Блог</a>
           </li>
         </ul>
       </nav>
@@ -63,6 +63,12 @@
               привычные серые вещи! А еще я
               познакомился со своей будущей женой в
               комментариях к выложенной фотографии!»
+            </p>
+          </article>
+          <article class="app-review">
+            <h1 class="app-review__user">Иванова Мария</h1>
+            <p class="app-review__text">
+              Отзыв
             </p>
           </article>
         </div>
