--- a/index.html
+++ b/index.html
@@ -26,31 +26,37 @@
       </nav>
     </div>
     <section class="intro">
-      <h1>Взгляните на жизнь иначе</h1>
-      <img src="#" alt="placehold" width="50" height="50">
+      <h1 class="intro__text">Взгляните на жизнь иначе</h1>
+      <img class="intro__image" src="#" alt="placehold" width="50" height="50">
     </section>
-    <section class="applicaitions">
-      <a href="#">Скачать приложение</a>
-      <div>
+    <section class="app">
+      <a class="app__load-btn" href="#">Скачать приложение</a>
+      <div class="app__icons" >
         <img src="#" alt="placehold" width="50" height="50">
         <img src="#" alt="placehold" width="50" height="50">
         <img src="#" alt="placehold" width="50" height="50">
       </div>
-      <div>Доступно для iPhone, iPad, Android,
+      <div class="app__text">Доступно для iPhone, iPad, Android,
           Windows Phone, OS X, Windows 8
       </div>
 
     </section>
     <section class="info">
-      <p>Устали от серости мегаполиса?</p>
-      <p>Нам есть, что вам предложить!</p>
-      <h2>Поднимает настроение</h2>
-      <p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
-      <h2>Меняет мир вокруг</h2>
-      <p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-      <h2>Заводит новых друзей</h2>
-      <p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
-      <img src="#" alt="placehold" width="50" height="50">
+      <p class="info__feature">Устали от серости мегаполиса?</p>
+      <p class="info__feature">Нам есть, что вам предложить!</p>
+      <div class="info__feature__block">
+        <h2>Поднимает настроение</h2>
+        <p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+      </div>
+      <div class="info__feature__block">
+        <h2>Меняет мир вокруг</h2>
+        <p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+      </div>
+      <div class="info__feature__block">
+        <h2>Заводит новых друзей</h2>
+        <p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+      </div>
+      <img class="phone-image" src="#" alt="placehold" width="50" height="50">
     </section>
     <section class="reviews">
       <div class="slider">
