--- a/form.html
+++ b/form.html
@@ -5,34 +5,35 @@
     <title>Конкурс</title>
 </head>
 <body>
-  <div class="header">
-    <a class="logo" href="index.html">Pink</a>
-    <a class="nav-icon nav-icon--close" href="#"></a>
-    <nav class="nav header__nav">
-      <ul>
-        <li class="nav__item">
-          <a class="nav__link" href="#">Информация</a>
-        </li>
-        <li class="nav__item">
-          <a class="nav__link" href="#">Блог</a>
-        </li>
-        <li class="nav__item">
-          <a class="nav__link" href="#">Блог</a>
-        </li>
-        <li class="nav__item">
-          <a class="nav__link" href="#">Блог</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-  <h1>Конкурс на самое безбашенное путешествие с Пинк</h1>
-  <p>Поделитесь своей историей и получите шанс
+<div class="header">
+  <a class="logo" href="index.html">Pink</a>
+  <a class="nav-icon nav-icon--close" href="#"></a>
+  <nav class="nav">
+    <ul class="nav__list">
+      <li class="nav__item">
+        <a class="nav__link" href="#">Информация</a>
+      </li>
+      <li class="nav__item">
+        <a class="nav__link" href="#">Блог</a>
+      </li>
+      <li class="nav__item">
+        <a class="nav__link" href="#">Блог</a>
+      </li>
+      <li class="nav__item">
+        <a class="nav__link" href="#">Блог</a>
+      </li>
+    </ul>
+  </nav>
+</div>
+
+  <h1 class="contest-header">Конкурс на самое безбашенное путешествие с Пинк</h1>
+  <p class="contest-prize">Поделитесь своей историей и получите шанс
     выиграть ценный приз — 1000 миль на вашу
     бонусную карту! Пожалуйста, заполните
     форму ниже:
   </p>
   <form class="frm-contest" enctype="multipart/form-data" action="echo" method="post">
-    <fieldset>
+    <fieldset class="frm-contest__fields-group  frm-contest__fields-group--player">
       <label for="frm-contest-name">Имя:*</label>
       <input placeholder="Введите ваше имя" type="text" name="contest-name" id="frm-contest-name" required>
       <label for="frm-contest-surname">Фамилия:*</label>
@@ -40,9 +41,8 @@
       <label for="frm-contest-patronymic">Отчество:*</label>
       <input placeholder="Ну и отчество тоже" type="text" name="contest-patronymic" id="frm-contest-patronymic">
     </fieldset>
-    <fieldset>
-      <legend>C каким приложением путешествовали?*
-      </legend>
+    <fieldset class="frm-contest__fields-group frm-contest__fields-group--travel-app">
+      <legend>C каким приложением путешествовали?*</legend>
         <label>
           <input value="Pink для iOS" required type="radio" checked name="contest-app">
           Pink для iOS
@@ -56,7 +56,8 @@
           Windows Phone
         </label>
     </fieldset>
-    <fieldset>
+
+    <fieldset class="frm-contest__fields-group  frm-contest__fields-group--travel-period">
       <legend>Когда ва путешествовали?*</legend>
       <input required placeholder="1 апреля 2015" type="text" name="contest-date-begin" id="frm-contest-date-begin">
       <label for="frm-contest-date-begin">Дата выезда</label>
@@ -65,46 +66,51 @@
       <input required disabled placeholder="1 апреля 2015" type="text" name="contest-date-end" id="frm-contest-date-end">
       <label for="frm-contest-date-end">Дата возвращения</label>
     </fieldset>
-    <fieldset>
+
+    <fieldset class="frm-contest__fields-group  frm-contest__fields-group--companions">
       <label for="frm-travel-companions">Количество попутчиков</label>
       <input required placeholder="2 чел" type="text" name="travel-companions" id="frm-travel-companions">
-      <label for="frm-contest-companion1">№ Имя:*</label>
-      <span class="companion-num">1</span>
-      <input required placeholder="Введите ваше имя" type="text" name="companion-num1" id="frm-contest-companion1">
-      <label for="frm-contest-companion-nick1">Прозвище</label>
-      <input placeholder="Ну как же без этого" type="text" name="companion-nick1" id="frm-contest-companion-nick1">
-      <label for="frm-contest-companion2">№ Имя:*</label>
-      <span class="companion-num">2</span>
-      <input required placeholder="Введите ваше имя" type="text" name="companion-num2" id="frm-contest-companion2">
-      <label for="frm-contest-companion-nick2">Прозвище</label>
-      <input placeholder="Ну как же без этого" type="text" name="companion-nick2" id="frm-contest-companion-nick2">
+      <div class="frm_contest__companion-wrapper">
+        <label for="frm-contest-companion1">№ Имя:*</label>
+        <span class="frm-contest__companion-num">1</span>
+        <input required placeholder="Введите ваше имя" type="text" name="companion-num1" id="frm-contest-companion1">
+        <label for="frm-contest-companion-nick1">Прозвище</label>
+        <input placeholder="Ну как же без этого" type="text" name="companion-nick1" id="frm-contest-companion-nick1">
+      </div>
+      <div class="frm-contest__companion-wrapper">
+        <label for="frm-contest-companion2">№ Имя:*</label>
+        <span class="frm-contest__companion-num">2</span>
+        <input required placeholder="Введите ваше имя" type="text" name="companion-num2" id="frm-contest-companion2">
+        <label for="frm-contest-companion-nick2">Прозвище</label>
+        <input placeholder="Ну как же без этого" type="text" name="companion-nick2" id="frm-contest-companion-nick2">
+      </div>
     </fieldset>
 
-    <fieldset>
+    <fieldset class="frm-contest__fields-group  frm-contest__fields-group--goals">
       <legend>Ваши безбашенные достижения в путешествии
       </legend>
       <label>
-        <input type="checkbox" checked name="a1">
+        <input type="checkbox" checked name="g1">
         Сделал селфи с акулой
       </label>
       <label>
-        <input type="checkbox" checked name="a1">
+        <input type="checkbox" checked name="g2">
         Обгорел на пляже
       </label>
       <label>
-        <input type="checkbox" name="a1">
+        <input type="checkbox" name="g3">
         Видел Чака Норриса
       </label>
       <label>
-        <input type="checkbox" name="a1">
+        <input type="checkbox" name="g4">
         Накупил сувениров
       </label>
       <label>
-        <input type="checkbox" checked name="a1">
+        <input type="checkbox" checked name="g5">
         Удержал башню
       </label>
       <label>
-        <input type="checkbox" name="a1">
+        <input type="checkbox" name="g6">
         Разгромил отель
       </label>
     </fieldset>
@@ -114,58 +120,58 @@
 
     <div class="foto-container">
       <figure class="foto-item">
-        <button type="button" class="foto-del-btn">Удалить</button>
-        <img class="foto-icon" src="#" alt="placehold" width="50" height="50">
-        <figcaption class="foto-file">img-1.jpg</figcaption>
+        <button class="foto-item__del-btn" type="button" >Удалить</button>
+        <img class="foto-item__icon" src="#" alt="placehold" width="50" height="50">
+        <figcaption class="foto-item__file">img-1.jpg</figcaption>
       </figure>
       <figure class="foto-item">
-        <button type="button" class="foto-del-btn">Удалить</button>
-        <img class="foto-icon" src="#" alt="placehold" width="50" height="50">
-        <figcaption class="foto-file">img-2.jpg</figcaption>
+        <button class="foto-item__del-btn" type="button" >Удалить</button>
+        <img class="foto-item__icon" src="#" alt="placehold" width="50" height="50">
+        <figcaption class="foto-item__file">img-2.jpg</figcaption>
       </figure>
       <figure class="foto-item">
-        <button type="button" class="foto-del-btn">Удалить</button>
-        <img class="foto-icon" src="#" alt="placehold" width="50" height="50">
-        <figcaption class="foto-file">img-3.jpg</figcaption>
+        <button class="foto-item__del-btn" type="button" >Удалить</button>
+        <img class="foto-item__icon" src="#" alt="placehold" width="50" height="50">
+        <figcaption class="foto-item__file">img-3.jpg</figcaption>
       </figure>
       <figure class="foto-item">
-        <button type="button" class="foto-del-btn">Удалить</button>
-        <img class="foto-icon" src="#" alt="placehold" width="50" height="50">
-        <figcaption class="foto-file">img-4.jpg</figcaption>
+        <button class="foto-item__del-btn" type="button" >Удалить</button>
+        <img class="foto-item__icon" src="#" alt="placehold" width="50" height="50">
+        <figcaption class="foto-item__file">img-4.jpg</figcaption>
       </figure>
       <figure class="foto-item">
-        <button type="button" class="foto-del-btn">Удалить</button>
-        <img class="foto-icon" src="#" alt="placehold" width="50" height="50">
-        <figcaption class="foto-file">img-5.jpg</figcaption>
+        <button class="foto-item__del-btn" type="button" >Удалить</button>
+        <img class="foto-item__icon" src="#" alt="placehold" width="50" height="50">
+        <figcaption class="foto-item__file">img-5.jpg</figcaption>
       </figure>
       <figure class="foto-item">
-        <button type="button" class="foto-del-btn">Удалить</button>
-        <img class="foto-icon" src="#" alt="placehold" width="50" height="50">
-        <figcaption class="foto-file">img-6.jpg</figcaption>
+        <button class="foto-item__del-btn" type="button" >Удалить</button>
+        <img class="foto-item__icon" src="#" alt="placehold" width="50" height="50">
+        <figcaption class="foto-item__file">img-6.jpg</figcaption>
       </figure>
       <figure class="foto-item">
-        <button type="button" class="foto-del-btn">Удалить</button>
-        <img class="foto-icon" src="#" alt="placehold" width="50" height="50">
-        <figcaption class="foto-file">img-7.jpg</figcaption>
+        <button class="foto-item__del-btn" type="button" >Удалить</button>
+        <img class="foto-item__icon" src="#" alt="placehold" width="50" height="50">
+        <figcaption class="foto-item__file">img-7.jpg</figcaption>
       </figure>
       <figure class="foto-item">
-        <button type="button" class="foto-del-btn">Удалить</button>
-        <img class="foto-icon" src="#" alt="placehold" width="50" height="50">
-        <figcaption class="foto-file">img-8.jpg</figcaption>
+        <button class="foto-item__del-btn" type="button" >Удалить</button>
+        <img class="foto-item__icon" src="#" alt="placehold" width="50" height="50">
+        <figcaption class="foto-item__file">img-8.jpg</figcaption>
       </figure>
     </div>>
 
-    <button type="submit">Отправить форму</button>
-    <div>*-Обязательные поля</div>
+    <button class="frm-contest__btn-submit" type="submit">Отправить форму</button>
+    <div class="frm-contest__required-desc">*-Обязательные поля</div>
   </form>
-  <footer>
-    <a href="index.html">Pink</a>
-    <div>
-      <a href="#">Twitter</a>
-      <a href="#">Facebook</a>
-      <a href="#">You tube</a>
+  <footer class="contest-footer">
+    <a class="logo logo--glasse-img" href="index.html">Pink</a>
+    <div class="social-links">
+      <a class="social-links__link social-links__link--tw" href="#">Twitter</a>
+      <a class="social-links__link social-links__link--fb" href="#">Facebook</a>
+      <a class="social-links__link social-links__link--yt" href="#">You tube</a>
     </div>
-    <a>Разработано</a>
+    <a class="copyright" href="#">Разработано</a>
   </footer>
 
 </body>
