--- a/form.html
+++ b/form.html
@@ -153,7 +153,7 @@
         <img class="foto-icon" src="#" alt="placehold" width="50" height="50">
         <figcaption class="foto-file">img-8.jpg</figcaption>
       </figure>
-    </div>>
+    </div>
 
     <button type="submit">Отправить форму</button>
     <div>*-Обязательные поля</div>
