--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="top-menu">
-      <a href="#">Pink</a>
-      <a class="menu-btn" href="#"></a>
-      <nav class="mobile-menu">
+      <a class="top-menu__logo" href="#">Pink</a>
+      <a class="menu-btn" href="#">menu</a>
+      <nav class="main-menu">
         <ul>
           <li>
             <a href="#">Информация</a>
@@ -25,6 +27,8 @@
         </ul>
       </nav>
     </div>
+
+
     <section class="intro">
       <h1>Взгляните на жизнь иначе</h1>
       <img src="#" alt="placehold" width="50" height="50">
