--- a/index.html
+++ b/index.html
@@ -26,36 +26,38 @@
           </li>
         </ul>
       </nav>
+      <section class="intro">
+        <h1>Взгляните на жизнь иначе!</h1>
+        <img src="#" alt="placehold" width="50" height="50">
+      </section>
+
     </div>
 
 
-    <section class="intro">
-      <h1>Взгляните на жизнь иначе</h1>
-      <img src="#" alt="placehold" width="50" height="50">
-    </section>
-    <section class="applicaitions">
-      <a href="#">Скачать приложение</a>
-      <div>
+    <section class="applications">
+      <a class="applications__btn-buy" href="#">Скачать приложение</a>
+      <div class="applications__icons">
         <img src="#" alt="placehold" width="50" height="50">
         <img src="#" alt="placehold" width="50" height="50">
         <img src="#" alt="placehold" width="50" height="50">
       </div>
-      <div>Доступно для iPhone, iPad, Android,
+      <div class="applications__text">Доступно для iPhone, iPad, Android,
           Windows Phone, OS X, Windows 8
       </div>
 
     </section>
     <section class="info">
-      <p>Устали от серости мегаполиса?</p>
-      <p>Нам есть, что вам предложить!</p>
-      <h2>Поднимает настроение</h2>
-      <p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
-      <h2>Меняет мир вокруг</h2>
-      <p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-      <h2>Заводит новых друзей</h2>
-      <p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+      <p class="info__item-single">Устали от серости мегаполиса?</p>
+      <p class="info__item-single">Нам есть, что вам предложить!</p>
+      <h2 class="info__item-header">Поднимает настроение</h2>
+      <p class="info__item">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+      <h2 class="info__item-header">Меняет мир вокруг</h2>
+      <p class="info__item">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+      <h2 class="info__item-header">Заводит новых друзей</h2>
+      <p class="info__item">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
       <img src="#" alt="placehold" width="50" height="50">
     </section>
+
     <section class="reviews">
       <div class="slider">
         <div class="slider__item">
@@ -77,38 +79,39 @@
         </div>
       </div>
     </section>
+
     <section class="shop">
       <div class="slider">
         <div class="slider__item">
           <table class="rates">
             <tr>
-              <td>
-                <div>База</div>
-                <div>1,99 USD</div>
+              <td class="rates__item">
+                <div class="rates__name">База</div>
+                <div class="rates__price">1,99 USD</div>
               </td>
-              <td>
-                <div>Стандарт</div>
-                <div>3,99 USD</div>
+              <td class="rates__item">
+                <div class="rates__name">Стандарт</div>
+                <div class="rates__price">3,99 USD</div>
               </td>
-              <td>
-                <div>Андим</div>
-                <div>9,99 USD</div>
+              <td class="rates__item">
+                <div class="rates__name">Анлим</div>
+                <div class="rates__price">9,99 USD</div>
               </td>
             </tr>
             <tr>
-              <td>Розовый фильтр</td>
-              <td>Розовый фильтр</td>
-              <td>Розовый фильтр</td>
+              <td class="rates__feature">Розовый фильтр</td>
+              <td class="rates__feature">Розовый фильтр</td>
+              <td class="rates__feature">Розовый фильтр</td>
             </tr>
             <tr>
-              <td>Смайлики</td>
-              <td>Смайлики</td>
-              <td>Смайлики</td>
+              <td class="rates__feature">Смайлики</td>
+              <td class="rates__feature">Смайлики</td>
+              <td class="rates__feature">Смайлики</td>
             </tr>
             <tr>
-              <td>Коментарии</td>
-              <td>Коментарии</td>
-              <td>Коментарии</td>
+              <td class="rates__feature">Коментарии</td>
+              <td class="rates__feature">Коментарии</td>
+              <td class="rates__feature">Коментарии</td>
             </tr>
 
           </table>
@@ -121,14 +124,15 @@
         <i></i>
       </div>
     </section>
+
     <section class="contacts">
-      <p>Остались вопросы? Свяжитесь с нами!</p>
-      <h2>Звоните:</h2>
-      <p>+7(812) 555-66-66</p>
-      <h2>Пишите:</h2>
-      <p>mail@htmlacademy.ru</p>
-      <h2>Приезжайте в гости:</h2>
-      <p>ул. Большая Конюшенная, 19/8</p>
+      <p class="contacts__text">Остались вопросы? Свяжитесь с нами!</p>
+      <h2 class="contacts__item-header">Звоните:</h2>
+      <p class="contacts__item">+7(812) 555-66-66</p>
+      <h2 class="contacts__item-header">Пишите:</h2>
+      <p class="contacts__item">mail@htmlacademy.ru</p>
+      <h2 class="contacts__item-header">Приезжайте в гости:</h2>
+      <p class="contacts__item">ул. Большая Конюшенная, 19/8</p>
       <div class="map">
         <img src="#" alt="placehold" width="50" height="50">
       </div>
