--- a/form.html
+++ b/form.html
@@ -3,36 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Конкурс</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="header">
-  <a class="logo" href="index.html">Pink</a>
-  <a class="nav-icon nav-icon--close" href="#"></a>
-  <nav class="nav">
-    <ul class="nav__list">
-      <li class="nav__item">
-        <a class="nav__link" href="#">Информация</a>
-      </li>
-      <li class="nav__item">
-        <a class="nav__link" href="#">Блог</a>
-      </li>
-      <li class="nav__item">
-        <a class="nav__link" href="#">Блог</a>
-      </li>
-      <li class="nav__item">
-        <a class="nav__link" href="#">Блог</a>
-      </li>
-    </ul>
-  </nav>
+  <div class="top-menu">
+    <a class="top-menu__logo" href="#">Pink</a>
+    <a class="menu-btn" href="#">menu</a>
+    <nav class="main-menu">
+      <ul>
+        <li>
+          <a href="#">Информация</a>
+        </li>
+        <li>
+          <a href="#">Блог</a>
+        </li>
+        <li>
+          <a href="#">Отзывы</a>
+        </li>
+        <li>
+          <a href="#">Конкурс</a>
+        </li>
+      </ul>
+    </nav>
+  <h1 class="top-menu__text">Конкурс на самое безбашенное путешествие с Пинк</h1>
 </div>
 
-  <h1 class="contest-header">Конкурс на самое безбашенное путешествие с Пинк</h1>
-  <p class="contest-prize">Поделитесь своей историей и получите шанс
-    выиграть ценный приз — 1000 миль на вашу
-    бонусную карту! Пожалуйста, заполните
-    форму ниже:
-  </p>
   <form class="frm-contest" enctype="multipart/form-data" action="echo" method="post">
+    <p class="frm-contest__text">Поделитесь своей историей и получите шанс
+      выиграть ценный приз — 1000 миль на вашу
+      бонусную карту! <span>Пожалуйста, заполните
+      форму ниже:</span>
+    </p>
     <fieldset class="frm-contest__fields-group  frm-contest__fields-group--player">
       <label for="frm-contest-name">Имя:*</label>
       <input placeholder="Введите ваше имя" type="text" name="contest-name" id="frm-contest-name" required>
@@ -41,7 +43,7 @@
       <label for="frm-contest-patronymic">Отчество:*</label>
       <input placeholder="Ну и отчество тоже" type="text" name="contest-patronymic" id="frm-contest-patronymic">
     </fieldset>
-    <fieldset class="frm-contest__fields-group frm-contest__fields-group--travel-app">
+    <fieldset class="frm-contest__fields-group  frm-contest__fields-group--travel-app">
       <legend>C каким приложением путешествовали?*</legend>
         <label>
           <input value="Pink для iOS" required type="radio" checked name="contest-app">
