--- a/form.html
+++ b/form.html
@@ -44,7 +44,7 @@
       <input placeholder="Ну и отчество тоже" type="text" name="contest-patronymic" id="frm-contest-patronymic">
     </fieldset>
     <fieldset class="frm-contest__fields-group  frm-contest__fields-group--travel-app">
-      <legend>C каким приложением путешествовали?*</legend>
+      <h2>C каким приложением путешествовали?*</h2>
         <label>
           <input value="Pink для iOS" required type="radio" checked name="contest-app">
           Pink для iOS
@@ -60,7 +60,7 @@
     </fieldset>
 
     <fieldset class="frm-contest__fields-group  frm-contest__fields-group--travel-period">
-      <legend>Когда ва путешествовали?*</legend>
+      <h2>Когда ва путешествовали?*</h2>
       <input required placeholder="1 апреля 2015" type="text" name="contest-date-begin" id="frm-contest-date-begin">
       <label for="frm-contest-date-begin">Дата выезда</label>
       <input required placeholder="10 дней" type="text" name="contest-days" id="frm-contest-days">
@@ -89,8 +89,8 @@
     </fieldset>
 
     <fieldset class="frm-contest__fields-group  frm-contest__fields-group--goals">
-      <legend>Ваши безбашенные достижения в путешествии
-      </legend>
+      <h2>Ваши безбашенные достижения в путешествии
+      </h2>
       <label>
         <input type="checkbox" checked name="g1">
         Сделал селфи с акулой
