--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
     </section>
     <section class="info">
-      <p class="info__item-single">Устали от серости мегаполиса?</p>
-      <p class="info__item-single">Нам есть, что вам предложить!</p>
-      <h2 class="info__item-header">Поднимает настроение</h2>
+      <h2 class="info__item-single">Устали от серости мегаполиса?</h2>
+      <h2 class="info__item-single">Нам есть, что вам предложить!</h2>
+      <h3 class="info__item-header">Поднимает настроение</h3>
       <p class="info__item">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
-      <h2 class="info__item-header">Меняет мир вокруг</h2>
+      <h3 class="info__item-header">Меняет мир вокруг</h3>
       <p class="info__item">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-      <h2 class="info__item-header">Заводит новых друзей</h2>
+      <h3 class="info__item-header">Заводит новых друзей</h3>
       <p class="info__item">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
       <img src="#" alt="placehold" width="50" height="50">
     </section>
@@ -82,7 +82,6 @@
 
     <section class="shop">
       <div class="slider">
-        <div class="slider__item">
           <table class="rates">
             <tr>
               <td class="rates__item">
@@ -117,7 +116,6 @@
           </table>
 
         </div>
-      </div>
       <div class="slider__switch  slider__switсh--rate-review">
         <i></i>
         <i class="slider__switch--active"></i>
